Implement Reset Password controller
- Refactored registration controller
